# masters-theses-HTR

./: .env.example  .gitignore  Dockerfile  README.md  app.py  demo_app.py  docker-compose.yml  format_files.ipynb  llm_ds_faulty.csv  pyproject.toml  requirements.txt  response_example.json  test_model_precision.ipynb
demo_app/: demo_app.py  run_pipeline.py
ml_models/: text_detection_model.hdf5
ml_models/mine_logs_v1/flor/: evaluate.txt  predict.txt  summary.txt  text_detection_model_v1.hdf5
ml_models/mine_logs_v2/flor/: predict.txt  text_detection_model_v2.hdf5
ml_models/mine_logs_v3/flor/: predict.txt
notebooks/: YOLO_WORD_DETECTION_TRAINING_SCRIPT.ipynb  format_files.ipynb  req.txt
pipeline/: convert_to_jpg.py  extract_regions_yolo.py  extract_words_yolo.py  handwritten_text_recognition.py
rest/: app.py  config.py  dependencies.py
rest/api/: text_extraction_api.py
rest/clients/: groq_client.py
rest/dependencies/: __init__.py
rest/models/: model.py
rest/services/: region_extraction_service.py  text_extraction_service.py  word_extraction_service.py
rest/templates/: text_extraction_template.py
src/: .env.example  demo_app.py  llm_ds_faulty.csv  main.py
src/notebooks/: YOLO_REGION_TRAINING_SCRIPT.ipynb  format_files.ipynb  test_model_precision.ipynb
src/rest/: config.py  dependencies.py
src/utils/: __init__.py  clean_image_pipeline.py  extract_regions.py  pascal_voc_to_yolo.py  shared.py
utils/: __init__.py  clean_image_pipeline.py  extract_regions.py  gif_to_jpg.py  image_pipeline_functions.py  label_generator.py
(+39 files in other folders)
